--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start:debug": "nodemon --config nodemon.json",
     "build": "nest build",
     "start": "npm run start:prod",
-    "start:prod": "node dist/main",
+    "start:prod": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -48,7 +48,6 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/bcrypt": "^5.0.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
