--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": ">=20.5.0"
+  },
   "scripts": {
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
@@ -12,6 +15,7 @@
     "build": "nest build",
     "start": "npm run start:prod",
     "start:prod": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "start:deploy": "set NODE_ENV=production && node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
