--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "private": true,
   "license": "UNLICENSED",
   "engines": {
-    "node": ">=20.5.0"
+    "node": ">=20.5.1"
   },
   "scripts": {
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nodemon --config nodemon.json",
     "build": "nest build",
-    "start": "npm run start:prod",
+    "start": "yarn run start:prod",
     "start:prod": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
-    "start:deploy": "set NODE_ENV=production && node dist/main.js",
+    "start:deploy": "NODE_ENV=production node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -40,7 +40,6 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "mongoose": "^6.11.6",
-    "npm": "^10.2.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -56,7 +55,7 @@
     "@types/bcrypt": "^5.0.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.5.1",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.12",
