--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "author": "",
   "private": true,
-  "license": "UNLICENSED",
   "engines": {
-    "node": "14.21.2"
+    "node": ">=16.14",
+    "npm": "8.x"
   },
+  "license": "UNLICENSED",
   "scripts": {
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nodemon --config nodemon.json",
     "build": "nest build",
-    "start": "yarn run start:prod",
+    "start": "npm run start:prod",
     "start:prod": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:deploy": "NODE_ENV=production node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
