--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nodemon --config nodemon.json",
-    "build": "nest build",
+    "build": "./node_modules/.bin/nest build",
     "start": "npm run start:prod",
     "start:prod": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:deploy": "NODE_ENV=production node dist/main.js",
