--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "license": "UNLICENSED",
   "scripts": {
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
-    "start:debug": "nodemon --config nodemon.json",
-    "build": "./node_modules/.bin/nest build",
-    "start": "npm run start:prod",
-    "start:prod": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
-    "start:deploy": "NODE_ENV=production node dist/main.js",
+    "build": "npm install && nest build",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
